--- a/web/index.html
+++ b/web/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"
       rel="stylesheet"
     />
     <title>task-tracker</title>
@@ -16,3 +16,4 @@
     <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
+
