--- a/web/.storybook/preview-head.html
+++ b/web/.storybook/preview-head.html
@@ -2,7 +2,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Sora:wght@400;700&display=swap"
     rel="stylesheet"
   />
 </head>
@@ -10,3 +10,4 @@
 <script>
   window.global = window;
 </script>
+
